; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_p54spi.c_p54spi_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_p54spi.c_p54spi_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }
%struct.p54s_priv = type { i32, i32, i32 }

@p54spi_gpio_irq = common dso_local global i32 0, align 4
@p54spi_gpio_power = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_device*)* @p54spi_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @p54spi_remove(%struct.spi_device* %0) #0 {
  %2 = alloca %struct.spi_device*, align 8
  %3 = alloca %struct.p54s_priv*, align 8
  store %struct.spi_device* %0, %struct.spi_device** %2, align 8
  %4 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %5 = call %struct.p54s_priv* @spi_get_drvdata(%struct.spi_device* %4)
  store %struct.p54s_priv* %5, %struct.p54s_priv** %3, align 8
  %6 = load %struct.p54s_priv*, %struct.p54s_priv** %3, align 8
  %7 = getelementptr inbounds %struct.p54s_priv, %struct.p54s_priv* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @p54_unregister_common(i32 %8)
  %10 = load i32, i32* @p54spi_gpio_irq, align 4
  %11 = call i32 @gpio_to_irq(i32 %10)
  %12 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %13 = call i32 @free_irq(i32 %11, %struct.spi_device* %12)
  %14 = load i32, i32* @p54spi_gpio_power, align 4
  %15 = call i32 @gpio_free(i32 %14)
  %16 = load i32, i32* @p54spi_gpio_irq, align 4
  %17 = call i32 @gpio_free(i32 %16)
  %18 = load %struct.p54s_priv*, %struct.p54s_priv** %3, align 8
  %19 = getelementptr inbounds %struct.p54s_priv, %struct.p54s_priv* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @release_firmware(i32 %20)
  %22 = load %struct.p54s_priv*, %struct.p54s_priv** %3, align 8
  %23 = getelementptr inbounds %struct.p54s_priv, %struct.p54s_priv* %22, i32 0, i32 1
  %24 = call i32 @mutex_destroy(i32* %23)
  %25 = load %struct.p54s_priv*, %struct.p54s_priv** %3, align 8
  %26 = getelementptr inbounds %struct.p54s_priv, %struct.p54s_priv* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @p54_free_common(i32 %27)
  ret i32 0
}

declare dso_local %struct.p54s_priv* @spi_get_drvdata(%struct.spi_device*) #1

declare dso_local i32 @p54_unregister_common(i32) #1

declare dso_local i32 @free_irq(i32, %struct.spi_device*) #1

declare dso_local i32 @gpio_to_irq(i32) #1

declare dso_local i32 @gpio_free(i32) #1

declare dso_local i32 @release_firmware(i32) #1

declare dso_local i32 @mutex_destroy(i32*) #1

declare dso_local i32 @p54_free_common(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
